--- a/panel/index.html
+++ b/panel/index.html
@@ -3,7 +3,7 @@
     <ui-box-container class="layout vertical left">
         <div>
             <ui-prop name="自动展开查找结果" type="boolean" v-value="expand" tooltip="· 两种不同的结果打印方式，至于效果试试便知"></ui-prop>
-            <ui-prop name="结果精确到节点" type="boolean" v-value="showNode" tooltip="· 引用结果是否精确到预制体或场景中的节点上的组件和属性（有的话）">
+            <ui-prop name="结果精确到节点" type="boolean" v-value="detail" tooltip="· 引用结果是否精确到预制体或场景中的节点上的组件和属性（有的话）">
             </ui-prop>
             <hr />
             <ui-prop name="查找快捷键" tooltip="· 在资源管理器中选择资源后按下快捷键即可开始查找资源引用">
